Fixes logo description on mobile.

--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -146,6 +146,10 @@
   .nav-btn {
     margin: 0 auto;
   }
+
+  .logo-accent {
+    padding-right: 2px;
+  }
 }
 
 @media screen and (max-width: 1343px) {
